force-app/main/default/objects/BLN_APICalloutMapper__mdt/BLN_APICalloutMapper__mdt.object-meta.xml
<CustomObject>
    <description>FOUK-6359, API callout header and URL mapping master</description>
    <label>API Callout Mapper</label>
    <pluralLabel>API Callout Mappers</pluralLabel>
</CustomObject>