force-app/main/default/objects/BLN_APICalloutMapper__mdt/fields/BLN_APITimeout__c.field-meta.xml
<CustomField>
    <fullName>BLN_APITimeout__c</fullName>
    <description>Timeout value Milliseconds</description>
    <inlineHelpText>Milliseconds</inlineHelpText>
    <label>API Timeout</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>