force-app/main/default/objects/BLN_APICalloutMapper__mdt/fields/BLN_CalloutURL__c.field-meta.xml
<CustomField>
    <fullName>BLN_CalloutURL__c</fullName>
    <description>FOUK-6359, Callout URL for Refund</description>
    <label>Callout URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>