force-app/main/default/objects/BLN_APICalloutMapper__mdt/fields/BLN_DestinationSystem__c.field-meta.xml
<CustomField>
    <fullName>BLN_DestinationSystem__c</fullName>
    <description>FOUK-6359, Destination System for Refund Integration</description>
    <label>Destination System</label>
    <length>50</length>
    <type>Text</type>
</CustomField>