force-app/main/default/objects/BLN_APICalloutMapper__mdt/fields/BLN_EntityName__c.field-meta.xml
<CustomField>
    <fullName>BLN_EntityName__c</fullName>
    <description>FOUK-6359, Entity Name of the callout</description>
    <label>Entity Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>