force-app/main/default/objects/BLN_APICalloutMapper__mdt/fields/BLN_Environment__c.field-meta.xml
<CustomField>
    <fullName>BLN_Environment__c</fullName>
    <description>FOUK-6359, Environment for Refund Integration</description>
    <label>Environment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>