force-app/main/default/objects/BLN_APICalloutMapper__mdt/fields/BLN_EventType__c.field-meta.xml
<CustomField>
    <fullName>BLN_EventType__c</fullName>
    <description>FOUK-6359, Event Type for Refund Integration</description>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create</fullName>
                <default>true</default>
                <label>Create</label>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>