force-app/main/default/objects/BLN_APICalloutMapper__mdt/fields/BLN_Headers__c.field-meta.xml
<CustomField>
    <fullName>BLN_Headers__c</fullName>
    <description>FOUK-6359, Headers for Refund Integration</description>
    <label>Headers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>