force-app/main/default/objects/BLN_APICalloutMapper__mdt/fields/BLN_Identification__c.field-meta.xml
<CustomField>
    <fullName>BLN_Identification__c</fullName>
    <description>FOUK-6359, Identification for Refund Integration</description>
    <label>Identification</label>
    <length>50</length>
    <type>Text</type>
</CustomField>