force-app/main/default/objects/BLN_APICalloutMapper__mdt/fields/BLN_Merchant__c.field-meta.xml
<CustomField>
    <fullName>BLN_Merchant__c</fullName>
    <description>FOUK-6359, Merchant for Refund Integration</description>
    <label>Merchant</label>
    <length>50</length>
    <type>Text</type>
</CustomField>