force-app/main/default/objects/BLN_APICalloutMapper__mdt/fields/BLN_Method__c.field-meta.xml
<CustomField>
    <fullName>BLN_Method__c</fullName>
    <description>Method for the Api callout</description>
    <label>Method</label>
    <length>20</length>
    <type>Text</type>
</CustomField>