force-app/main/default/objects/BLN_APICalloutMapper__mdt/fields/BLN_NamedCredential__c.field-meta.xml
<CustomField>
    <fullName>BLN_NamedCredential__c</fullName>
    <description>Named Credential for Callout Api</description>
    <label>Named Credential</label>
    <length>32</length>
    <type>Text</type>
</CustomField>