force-app/main/default/objects/BLN_APICalloutMapper__mdt/fields/BLN_SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>BLN_SourceSystem__c</fullName>
    <description>FOUK-6359, Source System for Refund Integration</description>
    <label>Source System</label>
    <length>50</length>
    <type>Text</type>
</CustomField>