force-app/main/default/objects/BLN_APICalloutMapper__mdt/listViews/Dev.listView-meta.xml
<ListView>
    <fullName>Dev</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>BLN_CalloutURL__c</columns>
    <columns>BLN_NamedCredential__c</columns>
    <columns>BLN_SourceSystem__c</columns>
    <columns>BLN_DestinationSystem__c</columns>
    <columns>BLN_Method__c</columns>
    <columns>BLN_EntityName__c</columns>
    <columns>BLN_Environment__c</columns>
    <columns>BLN_EventType__c</columns>
    <columns>BLN_Headers__c</columns>
    <columns>BLN_Identification__c</columns>
    <columns>BLN_Merchant__c</columns>
    <filterScope>Everything</filterScope>
    <label>Dev</label>
    <language>en_US</language>
</ListView>